fixed spacing on right header.

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -164,11 +164,12 @@ button {
 .header-right {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     min-width: 225px
 }
 
 .create-btn {
+    margin-right: 8px;
     padding: 8px;
     border: none;
 }
